[package]
name = "openhuman-tauri-resource-profiler"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = { version = "0.33", default-features = false, features = ["system"] }

# Keep this offline dev tool independent from both the root core crate and the
# Tauri package so profiling never changes the shipped dependency graph.
[workspace]
